--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://alfg71.github.io/victoriaCampaignWebsiteClient/",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
